fixed pagination for clusters from databricks directly.

--- a/config.ipynb
+++ b/config.ipynb
@@ -235,6 +235,7 @@
     "# These are typically large endpoints with thousands of records that paginate slowly\n",
     "# Processing them sequentially provides better visibility and avoids rate limiting\n",
     "SEQUENTIAL_ENDPOINTS: List[str] = [\n",
+    "    \"databricks_cluster\",\n",
     "    \"databricks_job\",\n",
     "    \"databricks_registered_model\", \n",
     "    \"databricks_external_location\",\n",
@@ -258,34 +259,34 @@
     "# None = use endpoint's default setting\n",
     "ENDPOINT_PAGINATION_OVERRIDES = {\n",
     "    # --- Compute ---\n",
-    "    \"databricks_cluster\": None,             # No pagination available\n",
+    "    \"databricks_cluster\": True,             # Enable pagination (can be many clusters)\n",
     "    \"databricks_cluster_policy\": True,      # Enable pagination (can be many policies)\n",
     "    \"databricks_instance_pool\": None,       # No pagination available\n",
     "    \n",
     "    # --- Workspace / Files ---\n",
     "    \"databricks_workspace_file\": True,     # Disable - usually too large and not needed in full\n",
     "    \"databricks_dbfs_file\": True,          # Disable - usually too large and not needed in full\n",
-    "    \"databricks_workspace_conf\": None,      # No pagination available (single object)\n",
-    "    \"databricks_global_init_script\": None,  # No pagination available\n",
+    "    \"databricks_workspace_conf\": None,     # No pagination available (single object)\n",
+    "    \"databricks_global_init_script\": None, # No pagination available\n",
     "    \n",
     "    # --- Jobs / Pipelines / Alerts / Dashboards ---\n",
     "    \"databricks_job\": True,                # Enable pagination (can be many jobs)\n",
-    "    \"databricks_pipeline\": None,            # No pagination available\n",
+    "    \"databricks_pipeline\": None,           # No pagination available\n",
     "    \"databricks_alert\": True,              # Enable pagination (can be many alerts)\n",
     "    \"databricks_dashboard\": True,          # Disable for faster collection (first page usually sufficient)\n",
     "    \n",
     "    # --- MLflow / Serving ---\n",
     "    \"databricks_registered_model\": True,   # Enable pagination (can be many models)\n",
-    "    \"databricks_experiment\": True,          # Enable pagination (can be many experiments)\n",
-    "    \"databricks_model_serving\": True,       # Enable pagination (can be many endpoints)\n",
+    "    \"databricks_experiment\": True,         # Enable pagination (can be many experiments)\n",
+    "    \"databricks_model_serving\": True,      # Enable pagination (can be many endpoints)\n",
     "    \n",
     "    # --- DBSQL ---\n",
-    "    \"databricks_sql_endpoint\": True,        # Enable pagination (can be many warehouses)\n",
+    "    \"databricks_sql_endpoint\": True,       # Enable pagination (can be many warehouses)\n",
     "    \"databricks_sql_alerts\": True,         # Enable pagination (alias to databricks_alert)\n",
     "    \n",
     "    # --- UC / Metastore ---\n",
     "    \"databricks_catalog\": None,             # No pagination available (usually small list)\n",
-    "    \"databricks_external_location\": True,  # Enable pagination (can be many locations)\n",
+    "    \"databricks_external_location\": True,   # Enable pagination (can be many locations)\n",
     "    \"databricks_storage_credential\": True,  # Enable pagination (can be many credentials)\n",
     "    \"databricks_share\": True,               # Enable pagination (can be many shares)\n",
     "    \"databricks_recipient\": True,           # Enable pagination (can be many recipients)\n",
@@ -294,7 +295,7 @@
     "    \"databricks_repo\": True,                # Enable pagination (can be many repos)\n",
     "    \"databricks_secret_scope\": None,        # No pagination available\n",
     "    \"databricks_group\": True,               # Enable pagination (can be many groups)\n",
-    "    \"databricks_connection\": True,         # Enable pagination (can be many connections)\n",
+    "    \"databricks_connection\": True,          # Enable pagination (can be many connections)\n",
     "    \"databricks_credential\": None,          # No pagination available\n",
     "    \n",
     "    # --- Vector Search ---\n",
