fix: prevent column explosion in cluster table
Problem: raw_databricks_cluster table had hundreds of columns due to:
- executors array being flattened (executors_0_*, executors_1_*, ...)
- spark_conf being flattened into individual columns
- aws_attributes, azure_attributes flattened
- custom_tags, default_tags flattened
Result: Unmanageable schema with 200+ columns

Solution: Apply same preprocessing used for UC tables
- Added databricks_cluster to _preprocess_uc_records()
- Keep ~30 core scalar fields as columns (cluster_id, state, spark_version, etc.)
- Convert complex nested fields to JSON strings:
  - executors → executors_json
  - spark_conf → spark_conf_json
  - aws_attributes → aws_attributes_json
  - azure_attributes → azure_attributes_json
  - custom_tags → custom_tags_json
  - default_tags → default_tags_json
  - init_scripts → init_scripts_json

Result: Manageable schema with ~40 columns total
- Scalar fields remain queryable
- Complex data preserved as JSON (can use get_json_object() in SQL)
- No data loss, just better organization

--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -154,7 +154,7 @@
     "    return result\n",
     "\n",
     "def _preprocess_uc_records(records: List[Dict[str, Any]], table_type: str) -> List[Dict[str, Any]]:\n",
-    "    \"\"\"Preprocess Unity Catalog records to prevent excessive column explosion.\"\"\"\n",
+    "    \"\"\"Preprocess records to prevent excessive column explosion.\"\"\"\n",
     "    if table_type == 'databricks_table':\n",
     "        # For UC tables, aggressively convert ALL nested structures to JSON\n",
     "        # Only keep simple scalar fields as columns\n",
@@ -164,6 +164,27 @@
     "        return [_convert_all_complex_to_json(r, keep_scalar_fields=[\n",
     "            'catalog_name', 'schema_name', 'full_name', 'owner', \n",
     "            'created_at', 'updated_at', 'comment', '_catalog', '_schema'\n",
+    "        ]) for r in records]\n",
+    "    elif table_type == 'databricks_cluster':\n",
+    "        # For clusters, keep core scalar fields and convert complex nested fields to JSON\n",
+    "        # This prevents column explosion from executors array, spark_conf, tags, etc.\n",
+    "        return [_convert_all_complex_to_json(r, keep_scalar_fields=[\n",
+    "            # Core identifiers\n",
+    "            'cluster_id', 'cluster_name', 'cluster_source',\n",
+    "            # State and timing\n",
+    "            'state', 'state_message', 'start_time', 'terminated_time', \n",
+    "            'last_state_loss_time', 'last_activity_time', 'last_restarted_time',\n",
+    "            # Configuration\n",
+    "            'spark_version', 'node_type_id', 'driver_node_type_id',\n",
+    "            'num_workers', 'autoscale_min_workers', 'autoscale_max_workers',\n",
+    "            'autotermination_minutes', 'enable_elastic_disk', 'enable_local_disk_encryption',\n",
+    "            # User/ownership\n",
+    "            'creator_user_name', 'single_user_name',\n",
+    "            # Metadata\n",
+    "            'cluster_memory_mb', 'cluster_cores', \n",
+    "            'policy_id', 'data_security_mode', 'runtime_engine',\n",
+    "            # Injected fields\n",
+    "            '_collected_at', '_workspace'\n",
     "        ]) for r in records]\n",
     "    else:\n",
     "        return records\n",
