Add JSON preprocessing for 8 additional large payload tables to prevent column explosion

--- a/config.ipynb
+++ b/config.ipynb
@@ -235,7 +235,6 @@
     "# These are typically large endpoints with thousands of records that paginate slowly\n",
     "# Processing them sequentially provides better visibility and avoids rate limiting\n",
     "SEQUENTIAL_ENDPOINTS: List[str] = [\n",
-    "    \"databricks_cluster\",\n",
     "    \"databricks_job\",\n",
     "    \"databricks_registered_model\", \n",
     "    \"databricks_external_location\",\n",
@@ -249,6 +248,7 @@
     "    \"databricks_alert\",\n",
     "    \"databricks_workspace_file\",\n",
     "    \"databricks_dbfs_file\",\n",
+    "    \"databricks_cluster\", # Takes a lot of time\n",
     "]\n",
     "\n",
     "# Global pagination controls (can be overridden per endpoint)\n",
