--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -186,6 +186,53 @@
     "            # Injected fields\n",
     "            '_collected_at', '_workspace'\n",
     "        ]) for r in records]\n",
+    "    elif table_type == 'databricks_job':\n",
+    "        return [_convert_all_complex_to_json(r, keep_scalar_fields=[\n",
+    "            'job_id', 'creator_user_name', 'created_time', 'run_as_user_name',\n",
+    "            '_collected_at', '_workspace'\n",
+    "        ]) for r in records]\n",
+    "    elif table_type == 'databricks_pipeline':\n",
+    "        return [_convert_all_complex_to_json(r, keep_scalar_fields=[\n",
+    "            'pipeline_id', 'name', 'creator_user_name', 'state', 'health',\n",
+    "            'latest_updates_state', 'latest_updates_creation_time',\n",
+    "            '_collected_at', '_workspace'\n",
+    "        ]) for r in records]\n",
+    "    elif table_type == 'databricks_model_serving':\n",
+    "        return [_convert_all_complex_to_json(r, keep_scalar_fields=[\n",
+    "            'id', 'name', 'creator', 'creation_timestamp', 'last_updated_timestamp',\n",
+    "            'state_config_served_models', 'state_ready',\n",
+    "            '_collected_at', '_workspace'\n",
+    "        ]) for r in records]\n",
+    "    elif table_type == 'databricks_instance_pool':\n",
+    "        return [_convert_all_complex_to_json(r, keep_scalar_fields=[\n",
+    "            'instance_pool_id', 'instance_pool_name', 'node_type_id',\n",
+    "            'min_idle_instances', 'max_capacity', 'idle_instance_autotermination_minutes',\n",
+    "            'state', '_collected_at', '_workspace'\n",
+    "        ]) for r in records]\n",
+    "    elif table_type == 'databricks_registered_model':\n",
+    "        return [_convert_all_complex_to_json(r, keep_scalar_fields=[\n",
+    "            'name', 'creation_timestamp', 'last_updated_timestamp', 'user_id',\n",
+    "            'id', 'description', '_collected_at', '_workspace'\n",
+    "        ]) for r in records]\n",
+    "    elif table_type == 'databricks_catalog':\n",
+    "        return [_convert_all_complex_to_json(r, keep_scalar_fields=[\n",
+    "            'name', 'catalog_type', 'owner', 'comment', 'metastore_id',\n",
+    "            'created_at', 'created_by', 'updated_at', 'updated_by',\n",
+    "            '_collected_at', '_workspace'\n",
+    "        ]) for r in records]\n",
+    "    elif table_type == 'databricks_connection':\n",
+    "        return [_convert_all_complex_to_json(r, keep_scalar_fields=[\n",
+    "            'name', 'connection_type', 'owner', 'comment', 'metastore_id',\n",
+    "            'created_at', 'created_by', 'updated_at', 'updated_by',\n",
+    "            '_collected_at', '_workspace'\n",
+    "        ]) for r in records]\n",
+    "    elif table_type == 'databricks_recipient':\n",
+    "        return [_convert_all_complex_to_json(r, keep_scalar_fields=[\n",
+    "            'name', 'owner', 'comment', 'metastore_id',\n",
+    "            'created_at', 'created_by', 'updated_at', 'updated_by',\n",
+    "            'authentication_type', 'data_recipient_global_metastore_id',\n",
+    "            '_collected_at', '_workspace'\n",
+    "        ]) for r in records]\n",
     "    else:\n",
     "        return records\n",
     "\n",
