Add JSON preprocessing for cluster_policy and experiment tables to prevent column explosion

--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -233,6 +233,18 @@
     "            'authentication_type', 'data_recipient_global_metastore_id',\n",
     "            '_collected_at', '_workspace'\n",
     "        ]) for r in records]\n",
+    "    elif table_type == 'databricks_cluster_policy':\n",
+    "        return [_convert_all_complex_to_json(r, keep_scalar_fields=[\n",
+    "            'policy_id', 'name', 'creator_user_name', 'created_at_timestamp',\n",
+    "            'description', 'is_default', 'max_clusters_per_user',\n",
+    "            '_collected_at', '_workspace'\n",
+    "        ]) for r in records]\n",
+    "    elif table_type == 'databricks_experiment':\n",
+    "        return [_convert_all_complex_to_json(r, keep_scalar_fields=[\n",
+    "            'experiment_id', 'name', 'artifact_location', 'lifecycle_stage',\n",
+    "            'creation_time', 'last_update_time',\n",
+    "            '_collected_at', '_workspace'\n",
+    "        ]) for r in records]\n",
     "    else:\n",
     "        return records\n",
     "\n",
