--- a/endpoints.ipynb
+++ b/endpoints.ipynb
@@ -179,8 +179,8 @@
     "        \"paginate\": True,  # Can be overridden by ENDPOINT_PAGINATION_OVERRIDES\n",
     "        \"limit_param\": \"limit\",\n",
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
-    "        \"page_param\": \"page_token\",\n",
-    "        \"token_key\": \"page_token\"\n",
+    "        \"page_param\": \"page_token\",      # Request param\n",
+    "        \"token_key\": \"next_page_token\"   # Response field per API docs\n",
     "    },\n",
     "\n",
     "    # --- MLflow / Serving ---\n",
