Add 'enabled' flag to all endpoints for fine-grained collection control
- Added 'enabled' field to all endpoint definitions (default: True)
- Updated get_all_endpoints() to filter by enabled flag
- Documented new feature in README with examples and common exclusions
- Provides cleaner, more maintainable way to exclude specific endpoints

--- a/endpoints.ipynb
+++ b/endpoints.ipynb
@@ -99,6 +99,7 @@
    "outputs": [],
    "source": [
     "# API ENDPOINT DEFINITIONS\n",
+    "# Set \"enabled\": False to skip collection of specific endpoints\n",
     "API_ENDPOINTS: Dict[str, Dict[str, Any]] = {\n",
     "    # --- Compute ---\n",
     "    \"databricks_cluster\": {\n",
@@ -108,7 +109,8 @@
     "        \"limit_param\": \"page_size\",\n",
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
     "        \"page_param\": \"page_token\",\n",
-    "        \"token_key\": \"next_page_token\"\n",
+    "        \"token_key\": \"next_page_token\",\n",
+    "        \"enabled\": True\n",
     "    },\n",
     "    \"databricks_cluster_policy\": {\n",
     "        \"url\": \"/api/2.0/policies/clusters/list\",\n",
@@ -117,12 +119,14 @@
     "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\",\n",
     "        \"limit_param\": \"page_size\",\n",
-    "        \"limit\": PAGE_SIZE_DEFAULT\n",
+    "        \"limit\": PAGE_SIZE_DEFAULT,\n",
+    "        \"enabled\": True\n",
     "    },\n",
     "    \"databricks_instance_pool\": {\n",
     "        \"url\": \"/api/2.0/instance-pools/list\",\n",
     "        \"list_key\": \"instance_pools\",\n",
-    "        \"paginate\": False\n",
+    "        \"paginate\": False,\n",
+    "        \"enabled\": True\n",
     "    },\n",
     "\n",
     "    # --- Workspace / Files ---\n",
@@ -130,23 +134,27 @@
     "        \"url\": \"/api/2.0/workspace/list\",\n",
     "        \"fixed_params\": {\"path\": \"/\"},\n",
     "        \"list_key\": \"objects\",\n",
-    "        \"paginate\": False  # Usually too large and not needed in full\n",
+    "        \"paginate\": False,  # Usually too large and not needed in full\n",
+    "        \"enabled\": True\n",
     "    },\n",
     "    \"databricks_dbfs_file\": {\n",
     "        \"url\": \"/api/2.0/dbfs/list\",\n",
     "        \"fixed_params\": {\"path\": \"/\"},\n",
     "        \"list_key\": \"files\",\n",
-    "        \"paginate\": False  # Usually too large and not needed in full\n",
+    "        \"paginate\": False,  # Usually too large and not needed in full\n",
+    "        \"enabled\": True\n",
     "    },\n",
     "    \"databricks_workspace_conf\": {\n",
     "        \"url\": \"/api/2.0/workspace-conf\",\n",
     "        \"list_key\": None,  # object, not list\n",
-    "        \"paginate\": False\n",
+    "        \"paginate\": False,\n",
+    "        \"enabled\": True\n",
     "    },\n",
     "    \"databricks_global_init_script\": {\n",
     "        \"url\": \"/api/2.0/global-init-scripts\",\n",
     "        \"list_key\": \"scripts\",\n",
-    "        \"paginate\": False\n",
+    "        \"paginate\": False,\n",
+    "        \"enabled\": True\n",
     "    },\n",
     "\n",
     "    # --- Jobs / Pipelines / Alerts / Dashboards ---\n",
@@ -157,12 +165,14 @@
     "        \"limit_param\": \"limit\",\n",
     "        \"limit\": JOBS_PAGE_SIZE,      # API cap = 100\n",
     "        \"page_param\": \"page_token\",\n",
-    "        \"token_key\": \"next_page_token\"\n",
+    "        \"token_key\": \"next_page_token\",\n",
+    "        \"enabled\": True\n",
     "    },\n",
     "    \"databricks_pipeline\": {\n",
     "        \"url\": \"/api/2.0/pipelines\",\n",
     "        \"list_key\": \"statuses\",\n",
-    "        \"paginate\": False\n",
+    "        \"paginate\": False,\n",
+    "        \"enabled\": True\n",
     "    },\n",
     "    \"databricks_alert\": {  # SQL Alerts (legacy alias)\n",
     "        \"url\": \"/api/2.0/sql/alerts\",\n",
@@ -171,7 +181,8 @@
     "        \"limit_param\": \"limit\",\n",
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
     "        \"page_param\": \"page_token\",\n",
-    "        \"token_key\": \"next_page_token\"\n",
+    "        \"token_key\": \"next_page_token\",\n",
+    "        \"enabled\": True\n",
     "    },\n",
     "    \"databricks_dashboard\": {  # Lakeview dashboards\n",
     "        \"url\": \"/api/2.0/lakeview/dashboards\",\n",
@@ -180,7 +191,8 @@
     "        \"limit_param\": \"limit\",\n",
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
     "        \"page_param\": \"page_token\",      # Request param\n",
-    "        \"token_key\": \"next_page_token\"   # Response field per API docs\n",
+    "        \"token_key\": \"next_page_token\",  # Response field per API docs\n",
+    "        \"enabled\": True\n",
     "    },\n",
     "\n",
     "    # --- MLflow / Serving ---\n",
@@ -191,7 +203,8 @@
     "        \"limit_param\": \"max_results\",\n",
     "        \"limit\": 100,  # MLflow cap\n",
     "        \"page_param\": \"page_token\",\n",
-    "        \"token_key\": \"next_page_token\"\n",
+    "        \"token_key\": \"next_page_token\",\n",
+    "        \"enabled\": True\n",
     "    },\n",
     "    \"databricks_experiment\": {\n",
     "        \"url\": \"/api/2.0/mlflow/experiments/list\",\n",
@@ -200,7 +213,8 @@
     "        \"limit_param\": \"page_size\",\n",
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
     "        \"page_param\": \"page_token\",\n",
-    "        \"token_key\": \"next_page_token\"\n",
+    "        \"token_key\": \"next_page_token\",\n",
+    "        \"enabled\": True\n",
     "    },\n",
     "    \"databricks_model_serving\": {\n",
     "        \"url\": \"/api/2.0/serving-endpoints\",\n",
@@ -209,7 +223,8 @@
     "        \"limit_param\": \"page_size\",\n",
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
     "        \"page_param\": \"page_token\",\n",
-    "        \"token_key\": \"next_page_token\"\n",
+    "        \"token_key\": \"next_page_token\",\n",
+    "        \"enabled\": True\n",
     "    },\n",
     "\n",
     "    # --- DBSQL ---\n",
@@ -220,7 +235,8 @@
     "        \"limit_param\": \"page_size\",\n",
     "        \"limit\": DBSQL_WH_PAGE_SIZE,\n",
     "        \"page_param\": \"page_token\",\n",
-    "        \"token_key\": \"next_page_token\"\n",
+    "        \"token_key\": \"next_page_token\",\n",
+    "        \"enabled\": True\n",
     "    },\n",
     "    \"databricks_sql_alerts\": {     # alias for alerts\n",
     "        \"url\": \"/api/2.0/sql/alerts\",\n",
@@ -229,14 +245,16 @@
     "        \"limit_param\": \"limit\",\n",
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
     "        \"page_param\": \"page_token\",\n",
-    "        \"token_key\": \"next_page_token\"\n",
+    "        \"token_key\": \"next_page_token\",\n",
+    "        \"enabled\": True\n",
     "    },\n",
     "\n",
     "    # --- UC / Metastore ---\n",
     "    \"databricks_catalog\": {\n",
     "        \"url\": \"/api/2.1/unity-catalog/catalogs\",\n",
     "        \"list_key\": \"catalogs\",\n",
-    "        \"paginate\": False\n",
+    "        \"paginate\": False,\n",
+    "        \"enabled\": True\n",
     "    },\n",
     "    \"databricks_external_location\": {\n",
     "        \"url\": \"/api/2.1/unity-catalog/external-locations\",\n",
@@ -245,7 +263,8 @@
     "        \"limit_param\": \"max_results\",\n",
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
     "        \"page_param\": \"page_token\",\n",
-    "        \"token_key\": \"next_page_token\"\n",
+    "        \"token_key\": \"next_page_token\",\n",
+    "        \"enabled\": True\n",
     "    },\n",
     "    \"databricks_storage_credential\": {\n",
     "        \"url\": \"/api/2.1/unity-catalog/storage-credentials\",\n",
@@ -254,7 +273,8 @@
     "        \"limit_param\": \"max_results\",\n",
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
     "        \"page_param\": \"page_token\",\n",
-    "        \"token_key\": \"next_page_token\"\n",
+    "        \"token_key\": \"next_page_token\",\n",
+    "        \"enabled\": True\n",
     "    },\n",
     "    \"databricks_share\": {\n",
     "        \"url\": \"/api/2.1/unity-catalog/shares\",\n",
@@ -263,7 +283,8 @@
     "        \"limit_param\": \"max_results\",\n",
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
     "        \"page_param\": \"page_token\",\n",
-    "        \"token_key\": \"next_page_token\"\n",
+    "        \"token_key\": \"next_page_token\",\n",
+    "        \"enabled\": True\n",
     "    },\n",
     "    \"databricks_recipient\": {\n",
     "        \"url\": \"/api/2.1/unity-catalog/recipients\",\n",
@@ -272,7 +293,8 @@
     "        \"limit_param\": \"max_results\",\n",
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
     "        \"page_param\": \"page_token\",\n",
-    "        \"token_key\": \"next_page_token\"\n",
+    "        \"token_key\": \"next_page_token\",\n",
+    "        \"enabled\": True\n",
     "    },\n",
     "\n",
     "    # --- Repos / Identity / Connections ---\n",
@@ -283,12 +305,14 @@
     "        \"limit_param\": \"page_size\",\n",
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
     "        \"page_param\": \"page_token\",\n",
-    "        \"token_key\": \"next_page_token\"\n",
+    "        \"token_key\": \"next_page_token\",\n",
+    "        \"enabled\": True\n",
     "    },\n",
     "    \"databricks_secret_scope\": {\n",
     "        \"url\": \"/api/2.0/secrets/scopes/list\",\n",
     "        \"list_key\": \"scopes\",\n",
-    "        \"paginate\": False\n",
+    "        \"paginate\": False,\n",
+    "        \"enabled\": True\n",
     "    },\n",
     "    \"databricks_group\": {\n",
     "        \"url\": \"/api/2.0/groups/list\",\n",
@@ -297,7 +321,8 @@
     "        \"limit_param\": \"page_size\",\n",
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
     "        \"page_param\": \"page_token\",\n",
-    "        \"token_key\": \"next_page_token\"\n",
+    "        \"token_key\": \"next_page_token\",\n",
+    "        \"enabled\": True\n",
     "    },\n",
     "    \"databricks_connection\": {\n",
     "        \"url\": \"/api/2.1/unity-catalog/connections\",\n",
@@ -306,12 +331,14 @@
     "        \"limit_param\": \"max_results\",\n",
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
     "        \"page_param\": \"page_token\",\n",
-    "        \"token_key\": \"next_page_token\"\n",
+    "        \"token_key\": \"next_page_token\",\n",
+    "        \"enabled\": True\n",
     "    },\n",
     "    \"databricks_credential\": {\n",
     "        \"url\": \"/api/2.0/instance-profiles/list\",\n",
     "        \"list_key\": \"instance_profiles\",\n",
-    "        \"paginate\": False\n",
+    "        \"paginate\": False,\n",
+    "        \"enabled\": True\n",
     "    },\n",
     "\n",
     "    # --- Vector Search ---\n",
@@ -322,7 +349,8 @@
     "        \"limit_param\": \"page_size\",\n",
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
     "        \"page_param\": \"page_token\",\n",
-    "        \"token_key\": \"next_page_token\"\n",
+    "        \"token_key\": \"next_page_token\",\n",
+    "        \"enabled\": True\n",
     "    },\n",
     "    # Indexes require endpoint_name; collected after endpoints\n",
     "    \"databricks_vector_search_index\": {\n",
@@ -334,7 +362,8 @@
     "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\",\n",
     "        \"requires_parent\": \"databricks_vector_search_endpoint\",\n",
-    "        \"parent_param\": \"endpoint_name\"\n",
+    "        \"parent_param\": \"endpoint_name\",\n",
+    "        \"enabled\": True\n",
     "    },\n",
     "}\n"
    ]
@@ -368,8 +397,13 @@
     "def get_all_endpoints() -> Dict[str, Dict[str, Any]]:\n",
     "    \"\"\"\n",
     "    Get all endpoint configurations with pagination settings resolved.\n",
+    "    Only returns endpoints where 'enabled' is True (default: True if not specified).\n",
     "    \"\"\"\n",
-    "    return {key: get_endpoint_config(key) for key in API_ENDPOINTS.keys()}"
+    "    return {\n",
+    "        key: get_endpoint_config(key) \n",
+    "        for key in API_ENDPOINTS.keys() \n",
+    "        if API_ENDPOINTS[key].get(\"enabled\", True)  # Default to True if not specified\n",
+    "    }"
    ]
   }
  ],
