Add max_pages feature to limit pagination per endpoint
- Added 'max_pages' field to all endpoints (default: 0 = unlimited)
- Updated _paginate() to stop after max_pages is reached
- Added GLOBAL_MAX_PAGES config for universal override
- Enhanced logging to show page progress (e.g., Page 3/5)
- Documented in README with examples and use cases
- Useful for testing, sampling, and cost control

--- a/api_client.ipynb
+++ b/api_client.ipynb
@@ -112,6 +112,11 @@
     "        token_key   = cfg.get(\"token_key\")\n",
     "        list_key    = cfg.get(\"list_key\")\n",
     "        limit_val   = cfg.get(\"limit\", PAGE_SIZE_DEFAULT)\n",
+    "        max_pages   = cfg.get(\"max_pages\", 0)  # 0 = unlimited\n",
+    "        \n",
+    "        # Global override takes precedence if set\n",
+    "        if GLOBAL_MAX_PAGES > 0:\n",
+    "            max_pages = GLOBAL_MAX_PAGES\n",
     "\n",
     "        if limit_param and limit_val:\n",
     "            params[limit_param] = limit_val\n",
@@ -120,6 +125,13 @@
     "        \n",
     "        while True:\n",
     "            page_num += 1\n",
+    "            \n",
+    "            # Check if we've reached max_pages limit\n",
+    "            if max_pages > 0 and page_num > max_pages:\n",
+    "                if VERBOSE_LOG:\n",
+    "                    print(f\"      🛑 Reached max_pages limit: {max_pages} pages ({len(items)} total items)\")\n",
+    "                break\n",
+    "            \n",
     "            status, data = await self._safe_get(session, base_url, params=params)\n",
     "            if status != 200 or not isinstance(data, dict):\n",
     "                break\n",
@@ -131,10 +143,11 @@
     "                # Log pagination progress for each page (skip page 1 to reduce noise)\n",
     "                if VERBOSE_LOG and page_num > 1:\n",
     "                    nxt = data.get(token_key) if token_key else None\n",
+    "                    page_info = f\"/{max_pages}\" if max_pages > 0 else \"\"\n",
     "                    if nxt:\n",
-    "                        print(f\"      📄 Page {page_num}: {len(page_items)} items | Next token: {nxt[:30]}...\")\n",
+    "                        print(f\"      📄 Page {page_num}{page_info}: {len(page_items)} items | Next token: {nxt[:30]}...\")\n",
     "                    else:\n",
-    "                        print(f\"      📄 Page {page_num}: {len(page_items)} items | Last page\")\n",
+    "                        print(f\"      📄 Page {page_num}{page_info}: {len(page_items)} items | Last page\")\n",
     "                        \n",
     "            elif list_key is None:\n",
     "                break  # object/unsupported\n",
