--- a/config.ipynb
+++ b/config.ipynb
@@ -97,7 +97,8 @@
     "# ---- Pagination defaults ----\n",
     "PAGE_SIZE_DEFAULT = 100\n",
     "JOBS_PAGE_SIZE = 100               # API max for /api/2.2/jobs/list\n",
-    "DBSQL_WH_PAGE_SIZE = 100"
+    "DBSQL_WH_PAGE_SIZE = 100\n",
+    "GLOBAL_MAX_PAGES = 0               # 0 = respect per-endpoint max_pages; N = override all endpoints"
    ]
   },
   {
