--- a/endpoints.ipynb
+++ b/endpoints.ipynb
@@ -100,6 +100,7 @@
    "source": [
     "# API ENDPOINT DEFINITIONS\n",
     "# Set \"enabled\": False to skip collection of specific endpoints\n",
+    "# Set \"max_pages\": N to limit collection to first N pages (0 = unlimited)\n",
     "API_ENDPOINTS: Dict[str, Dict[str, Any]] = {\n",
     "    # --- Compute ---\n",
     "    \"databricks_cluster\": {\n",
@@ -110,7 +111,8 @@
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
     "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\",\n",
-    "        \"enabled\": True\n",
+    "        \"enabled\": True,\n",
+    "        \"max_pages\": 0  # 0 = unlimited\n",
     "    },\n",
     "    \"databricks_cluster_policy\": {\n",
     "        \"url\": \"/api/2.0/policies/clusters/list\",\n",
@@ -120,13 +122,15 @@
     "        \"token_key\": \"next_page_token\",\n",
     "        \"limit_param\": \"page_size\",\n",
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
-    "        \"enabled\": True\n",
+    "        \"enabled\": True,\n",
+    "        \"max_pages\": 0\n",
     "    },\n",
     "    \"databricks_instance_pool\": {\n",
     "        \"url\": \"/api/2.0/instance-pools/list\",\n",
     "        \"list_key\": \"instance_pools\",\n",
     "        \"paginate\": False,\n",
-    "        \"enabled\": True\n",
+    "        \"enabled\": True,\n",
+    "        \"max_pages\": 0\n",
     "    },\n",
     "\n",
     "    # --- Workspace / Files ---\n",
@@ -135,26 +139,30 @@
     "        \"fixed_params\": {\"path\": \"/\"},\n",
     "        \"list_key\": \"objects\",\n",
     "        \"paginate\": False,  # Usually too large and not needed in full\n",
-    "        \"enabled\": True\n",
+    "        \"enabled\": True,\n",
+    "        \"max_pages\": 0\n",
     "    },\n",
     "    \"databricks_dbfs_file\": {\n",
     "        \"url\": \"/api/2.0/dbfs/list\",\n",
     "        \"fixed_params\": {\"path\": \"/\"},\n",
     "        \"list_key\": \"files\",\n",
     "        \"paginate\": False,  # Usually too large and not needed in full\n",
-    "        \"enabled\": True\n",
+    "        \"enabled\": True,\n",
+    "        \"max_pages\": 0\n",
     "    },\n",
     "    \"databricks_workspace_conf\": {\n",
     "        \"url\": \"/api/2.0/workspace-conf\",\n",
     "        \"list_key\": None,  # object, not list\n",
     "        \"paginate\": False,\n",
-    "        \"enabled\": True\n",
+    "        \"enabled\": True,\n",
+    "        \"max_pages\": 0\n",
     "    },\n",
     "    \"databricks_global_init_script\": {\n",
     "        \"url\": \"/api/2.0/global-init-scripts\",\n",
     "        \"list_key\": \"scripts\",\n",
     "        \"paginate\": False,\n",
-    "        \"enabled\": True\n",
+    "        \"enabled\": True,\n",
+    "        \"max_pages\": 0\n",
     "    },\n",
     "\n",
     "    # --- Jobs / Pipelines / Alerts / Dashboards ---\n",
@@ -166,13 +174,15 @@
     "        \"limit\": JOBS_PAGE_SIZE,      # API cap = 100\n",
     "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\",\n",
-    "        \"enabled\": True\n",
+    "        \"enabled\": True,\n",
+    "        \"max_pages\": 0  # 0 = unlimited\n",
     "    },\n",
     "    \"databricks_pipeline\": {\n",
     "        \"url\": \"/api/2.0/pipelines\",\n",
     "        \"list_key\": \"statuses\",\n",
     "        \"paginate\": False,\n",
-    "        \"enabled\": True\n",
+    "        \"enabled\": True,\n",
+    "        \"max_pages\": 0\n",
     "    },\n",
     "    \"databricks_alert\": {  # SQL Alerts (legacy alias)\n",
     "        \"url\": \"/api/2.0/sql/alerts\",\n",
@@ -182,7 +192,8 @@
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
     "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\",\n",
-    "        \"enabled\": True\n",
+    "        \"enabled\": True,\n",
+    "        \"max_pages\": 0\n",
     "    },\n",
     "    \"databricks_dashboard\": {  # Lakeview dashboards\n",
     "        \"url\": \"/api/2.0/lakeview/dashboards\",\n",
@@ -192,7 +203,8 @@
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
     "        \"page_param\": \"page_token\",      # Request param\n",
     "        \"token_key\": \"next_page_token\",  # Response field per API docs\n",
-    "        \"enabled\": True\n",
+    "        \"enabled\": True,\n",
+    "        \"max_pages\": 0\n",
     "    },\n",
     "\n",
     "    # --- MLflow / Serving ---\n",
@@ -204,7 +216,8 @@
     "        \"limit\": 100,  # MLflow cap\n",
     "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\",\n",
-    "        \"enabled\": True\n",
+    "        \"enabled\": True,\n",
+    "        \"max_pages\": 0\n",
     "    },\n",
     "    \"databricks_experiment\": {\n",
     "        \"url\": \"/api/2.0/mlflow/experiments/list\",\n",
@@ -214,7 +227,8 @@
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
     "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\",\n",
-    "        \"enabled\": True\n",
+    "        \"enabled\": True,\n",
+    "        \"max_pages\": 0\n",
     "    },\n",
     "    \"databricks_model_serving\": {\n",
     "        \"url\": \"/api/2.0/serving-endpoints\",\n",
@@ -224,7 +238,8 @@
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
     "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\",\n",
-    "        \"enabled\": True\n",
+    "        \"enabled\": True,\n",
+    "        \"max_pages\": 0\n",
     "    },\n",
     "\n",
     "    # --- DBSQL ---\n",
@@ -236,7 +251,8 @@
     "        \"limit\": DBSQL_WH_PAGE_SIZE,\n",
     "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\",\n",
-    "        \"enabled\": True\n",
+    "        \"enabled\": True,\n",
+    "        \"max_pages\": 0\n",
     "    },\n",
     "    \"databricks_sql_alerts\": {     # alias for alerts\n",
     "        \"url\": \"/api/2.0/sql/alerts\",\n",
@@ -246,7 +262,8 @@
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
     "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\",\n",
-    "        \"enabled\": True\n",
+    "        \"enabled\": True,\n",
+    "        \"max_pages\": 0\n",
     "    },\n",
     "\n",
     "    # --- UC / Metastore ---\n",
@@ -254,7 +271,8 @@
     "        \"url\": \"/api/2.1/unity-catalog/catalogs\",\n",
     "        \"list_key\": \"catalogs\",\n",
     "        \"paginate\": False,\n",
-    "        \"enabled\": True\n",
+    "        \"enabled\": True,\n",
+    "        \"max_pages\": 0\n",
     "    },\n",
     "    \"databricks_external_location\": {\n",
     "        \"url\": \"/api/2.1/unity-catalog/external-locations\",\n",
@@ -264,7 +282,8 @@
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
     "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\",\n",
-    "        \"enabled\": True\n",
+    "        \"enabled\": True,\n",
+    "        \"max_pages\": 0\n",
     "    },\n",
     "    \"databricks_storage_credential\": {\n",
     "        \"url\": \"/api/2.1/unity-catalog/storage-credentials\",\n",
@@ -274,7 +293,8 @@
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
     "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\",\n",
-    "        \"enabled\": True\n",
+    "        \"enabled\": True,\n",
+    "        \"max_pages\": 0\n",
     "    },\n",
     "    \"databricks_share\": {\n",
     "        \"url\": \"/api/2.1/unity-catalog/shares\",\n",
@@ -284,7 +304,8 @@
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
     "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\",\n",
-    "        \"enabled\": True\n",
+    "        \"enabled\": True,\n",
+    "        \"max_pages\": 0\n",
     "    },\n",
     "    \"databricks_recipient\": {\n",
     "        \"url\": \"/api/2.1/unity-catalog/recipients\",\n",
@@ -294,7 +315,8 @@
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
     "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\",\n",
-    "        \"enabled\": True\n",
+    "        \"enabled\": True,\n",
+    "        \"max_pages\": 0\n",
     "    },\n",
     "\n",
     "    # --- Repos / Identity / Connections ---\n",
@@ -306,13 +328,15 @@
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
     "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\",\n",
-    "        \"enabled\": True\n",
+    "        \"enabled\": True,\n",
+    "        \"max_pages\": 0\n",
     "    },\n",
     "    \"databricks_secret_scope\": {\n",
     "        \"url\": \"/api/2.0/secrets/scopes/list\",\n",
     "        \"list_key\": \"scopes\",\n",
     "        \"paginate\": False,\n",
-    "        \"enabled\": True\n",
+    "        \"enabled\": True,\n",
+    "        \"max_pages\": 0\n",
     "    },\n",
     "    \"databricks_group\": {\n",
     "        \"url\": \"/api/2.0/groups/list\",\n",
@@ -322,7 +346,8 @@
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
     "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\",\n",
-    "        \"enabled\": True\n",
+    "        \"enabled\": True,\n",
+    "        \"max_pages\": 0\n",
     "    },\n",
     "    \"databricks_connection\": {\n",
     "        \"url\": \"/api/2.1/unity-catalog/connections\",\n",
@@ -332,13 +357,15 @@
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
     "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\",\n",
-    "        \"enabled\": True\n",
+    "        \"enabled\": True,\n",
+    "        \"max_pages\": 0\n",
     "    },\n",
     "    \"databricks_credential\": {\n",
     "        \"url\": \"/api/2.0/instance-profiles/list\",\n",
     "        \"list_key\": \"instance_profiles\",\n",
     "        \"paginate\": False,\n",
-    "        \"enabled\": True\n",
+    "        \"enabled\": True,\n",
+    "        \"max_pages\": 0\n",
     "    },\n",
     "\n",
     "    # --- Vector Search ---\n",
@@ -350,7 +377,8 @@
     "        \"limit\": PAGE_SIZE_DEFAULT,\n",
     "        \"page_param\": \"page_token\",\n",
     "        \"token_key\": \"next_page_token\",\n",
-    "        \"enabled\": True\n",
+    "        \"enabled\": True,\n",
+    "        \"max_pages\": 0\n",
     "    },\n",
     "    # Indexes require endpoint_name; collected after endpoints\n",
     "    \"databricks_vector_search_index\": {\n",
@@ -363,7 +391,8 @@
     "        \"token_key\": \"next_page_token\",\n",
     "        \"requires_parent\": \"databricks_vector_search_endpoint\",\n",
     "        \"parent_param\": \"endpoint_name\",\n",
-    "        \"enabled\": True\n",
+    "        \"enabled\": True,\n",
+    "        \"max_pages\": 0\n",
     "    },\n",
     "}\n"
    ]
